--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #00AAFF;
+  --bs-primary: #1f62a5
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -209,7 +209,7 @@ sup {
 }
 
 a {
-  color: #00AAFF;
+  color: #1f62a5;
   text-decoration: underline;
 }
 a:hover {
@@ -2440,8 +2440,8 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
 }
 .form-check-input:checked {
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2450,8 +2450,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2528,7 +2528,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #00AAFF;
+  background-color: #1f62a5;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2557,7 +2557,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #00AAFF;
+  background-color: #1f62a5;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2965,8 +2965,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
 }
 .btn-primary:hover {
   color: #000;
@@ -2989,8 +2989,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #000;
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
 }
 
 .btn-secondary {
@@ -3204,27 +3204,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #00AAFF;
-  border-color: #00AAFF;
+  color: #1f62a5;
+  border-color: #1f62a5;
 }
 .btn-outline-primary:hover {
   color: #000;
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #000;
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #00AAFF;
+  color: #1f62a5;
   background-color: transparent;
 }
 
@@ -3405,7 +3405,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #00AAFF;
+  color: #1f62a5;
   text-decoration: underline;
 }
 .btn-link:hover {
@@ -3704,7 +3704,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #00AAFF;
+  background-color: #1f62a5;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3745,7 +3745,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #00AAFF;
+  background-color: #1f62a5;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3867,7 +3867,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #00AAFF;
+  color: #1f62a5
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3924,7 +3924,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #00AAFF;
+  background-color: #1f62a5;
 }
 
 .nav-fill > .nav-link,
@@ -4569,7 +4569,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #00AAFF;
+  color: #1f62a5;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4600,8 +4600,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5;
+  border-color: #1f62a5;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4797,7 +4797,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #00AAFF;
+  background-color: #1f62a5;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4880,8 +4880,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #00AAFF;
-  border-color: #00AAFF;
+  background-color: #1f62a5 ;
+  border-color: #1f62a5;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6121,7 +6121,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #00AAFF;
+  color: #1f62a5;
 }
 .link-primary:hover, .link-primary:focus {
   color: #ca7d60;
@@ -6524,7 +6524,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #00AAFF !important;
+  border-color: #1f62a5!important;
 }
 
 .border-secondary {
@@ -7007,7 +7007,7 @@ textarea.form-control-lg {
 
 .mb-3 {
   margin-bottom: 1rem !important;
-  color: white;
+  color: #343a3f;
   font-size: 35px !important;
 }
 
@@ -7355,7 +7355,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #00AAFF !important;
+  color: #1f62a5!important;
 }
 
 .text-secondary {
@@ -7411,7 +7411,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #00AAFF !important;
+  background-color: #1f62a5 !important;
 }
 
 .bg-secondary {
@@ -10899,6 +10899,7 @@ p.lead {
 #sideNav {
   padding-left: 1rem;
   padding-right: 1rem;
+  opacity: .9;
 }
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
@@ -10966,7 +10967,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #00AAFF;
+  background-color: #1f62a5;
 }
 
 .dev-icons {
@@ -11001,7 +11002,7 @@ section.resume-section .resume-section-content {
 }
 
 #skills {
-  background-color: #c4c4c4;
+  background-color: #b4c9e178;
   width: 100%;
   max-width: inherit;
 }
@@ -11015,9 +11016,13 @@ section.resume-section .resume-section-content {
 
 .lang-icon {
   height: 70px;
-  width: 70px;
+  width: 85px;
   color: white;
   margin-top: 40px;
+}
+
+#express {
+  width: 130px;
 }
 
 .lang-icons {
@@ -11247,35 +11252,35 @@ section.resume-section .resume-section-content {
 }
 
 .tic-screen{
-  background-color: #c2c2c2;
+  background-color: #696969;
   height: 100%;
   width: 100%;
-  opacity: .50;
+  opacity: .70;
   position: absolute;
   border-radius: 10px;
 }
 
 .snake-screen {
-  background-color: #008001;
+  background-color: #006900;
   height: 100%;
   width: 100%;
-  opacity: .50;
+  opacity: .70;
   position: absolute;
   border-radius: 10px;
 }
 .recipe-screen {
   height: 100%;
-  background-color: #244e58;
+  background-color: #214852;
   width: 100%;
-  opacity: .50;
+  opacity: .70;
   position: absolute;
   border-radius: 10px;
 }
 .blog-screen {
-  background-color: #6798ad;
+  background-color: #426270;
   height: 100%;
   width: 100%;  
-  opacity: .50;
+  opacity: .70;
   position: absolute;
   border-radius: 10px;
 }
@@ -11332,7 +11337,7 @@ section.resume-section .resume-section-content {
   letter-spacing: 1px;
 }
 
-.fa-cloud-download-alt {
+.fa-file {
   margin-left: 5px;
 }
 
@@ -11349,7 +11354,10 @@ section.resume-section .resume-section-content {
 
 #contact-me {
   max-width: inherit;
-  background-color: #c4c4c4;
+  background-color: #dce5f1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /* entire container, keeps perspective */
@@ -11393,20 +11401,33 @@ section.resume-section .resume-section-content {
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
-  font-size: 30px;
-  color: white;
+  color: #343a3f;
   display: flex;
   justify-content: center;
   align-items: center;
-
+  font-size: 15px;
 }
 
 .icon-card-subtitle {
-  color: white !important;
+  color: #343a3f !important;
   vertical-align: center;
   text-align: center;
+  font-size: 40px;
 }
 
+#about {
+  background-image: url('/assets/img/denver.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 30%;
+  background-position: bottom;
+  background-color: #f7f7f7;
+  padding-top: 40px;
+}
+
+#projects {
+  background-color: #f7f7f7;
+}
 /* Welcome */
 /* .welcome-title {
  display: flex;
@@ -11435,7 +11456,7 @@ section.resume-section .resume-section-content {
 } */
 
 /* New Style fade in */
-.fade-in {
+/* .fade-in {
   animation: fadeIn ease 5s;
   -webkit-animation: fadeIn ease 5s;
   -moz-animation: fadeIn ease 5s;
@@ -11487,11 +11508,11 @@ section.resume-section .resume-section-content {
   100% {
     opacity:1;
   }
-}
+} */
 
 /* The style below is just for the appearance of the example div */
 
-.style {
+/* .style {
   width:90vw; height:90vh;
   text-align:center;
   padding-top:calc(50vh - 50px);
@@ -11504,4 +11525,4 @@ section.resume-section .resume-section-content {
 .style p {
   color:#fff;
   font-size:50px;
-}
+} */
